--- a/JetEngine/JetEngine.vcxproj.filters
+++ b/JetEngine/JetEngine.vcxproj.filters
@@ -123,6 +123,12 @@
     <ClCompile Include="GUI\gui_window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Graphics\Renderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Decals.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics\Models\BasicModel.h">
@@ -228,9 +234,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Util\hash_map.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Util\HashMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Util\list.h">
