got basic foliage rendering work, a few random bug fixes, code cleanup, added support for geometry shaders in auto reloadable shader system, prevented creation of duplicate materials while loading models

--- a/JetEngine/JetEngine.vcxproj
+++ b/JetEngine/JetEngine.vcxproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <ClCompile Include="BlockModel.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="CInput.cpp" />
     <ClCompile Include="DbgNew.cpp" />
     <ClCompile Include="Decals.cpp" />
     <ClCompile Include="Defines.cpp" />
