Fix basic example compilation Start adding VR support Add way to get binary axis directions for rising and falling edge detection Add functions to be able to navigate gui with a controller Add normal maps to impostors for lighting Fix renderer overriding render target when finishing drawing shadows

--- a/JetEngine/JetEngine.vcxproj.filters
+++ b/JetEngine/JetEngine.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClCompile Include="GUI\gui_tabpages.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Graphics\VRRenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics\Models\BasicModel.h">
@@ -318,6 +321,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Graphics\Decals.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\VRRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
