--- a/JetEngine/JetEngine.vcxproj
+++ b/JetEngine/JetEngine.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="Graphics\Renderer.cpp" />
     <ClCompile Include="Graphics\RenderTexture.cpp" />
     <ClCompile Include="Graphics\Shader.cpp" />
+    <ClCompile Include="Graphics\VRRenderer.cpp" />
     <ClCompile Include="GUI\gui_slider.cpp" />
     <ClCompile Include="GUI\gui_tabpages.cpp" />
     <ClCompile Include="GUI\gui_window.cpp" />
@@ -145,6 +146,7 @@
     <ClInclude Include="Graphics\Renderer.h" />
     <ClInclude Include="Graphics\RenderTexture.h" />
     <ClInclude Include="Graphics\Shader.h" />
+    <ClInclude Include="Graphics\VRRenderer.h" />
     <ClInclude Include="GUI\gui_button.h" />
     <ClInclude Include="GUI\gui_dropbox.h" />
     <ClInclude Include="GUI\gui_label.h" />
