Improve build configurations in order to fix release mode

--- a/BasicExample/BasicExample.vcxproj
+++ b/BasicExample/BasicExample.vcxproj
@@ -43,12 +43,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);../;</IncludePath>
-    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(DXSDK_DIR)Lib\x86;../JetEngine/Debug;../JetGame/Debug;C:\Users\space\Desktop\DirectXTex\DirectXTex\Bin\Desktop_2017_Win10\Win32\Debug;</LibraryPath>
+    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(DXSDK_DIR)Lib\x86;../JetEngine/$(Configuration);../JetGame/$(Configuration);C:\Users\space\Desktop\DirectXTex\DirectXTex\Bin\Desktop_2017_Win10\Win32\$(Configuration)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);../;</IncludePath>
-    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(DXSDK_DIR)Lib\x86;</LibraryPath>
+    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(DXSDK_DIR)Lib\x86;../JetEngine/$(Configuration);../JetGame/$(Configuration);C:\Users\space\Desktop\DirectXTex\DirectXTex\Bin\Desktop_2017_Win10\Win32\$(Configuration)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
