--- a/JetEngine/JetEngine.vcxproj
+++ b/JetEngine/JetEngine.vcxproj
@@ -41,13 +41,13 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Users\space\Desktop\DirectXTex;C:\Users\Matthew\Desktop\JetNet;$(VC_IncludePath);$(WindowsSDK_IncludePath);$(DXSDK_DIR)include;C:\Users\space\Desktop\openal-soft\openal-soft\include</IncludePath>
-    <LibraryPath>C:\Users\space\Desktop\DirectXTex\DirectXTex\Bin\Desktop_2017_Win10\Win32\Debug;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(DXSDK_DIR)Lib\x86</LibraryPath>
+    <IncludePath>$(DXSDK_DIR)include;C:\Users\space\Desktop\openal-soft\openal-soft\include;C:\Users\Matthew\Desktop\JetNet;C:\Users\space\Desktop\DirectXTex;$(WindowsSDK_IncludePath);$(VC_IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\space\Desktop\DirectXTex\DirectXTex\Bin\Desktop_2017_Win10\Win32\$(Configuration);$(DXSDK_DIR)Lib\x86;$(WindowsSDK_LibraryPath_x86);$(VC_LibraryPath_x86)</LibraryPath>
     <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>C:\Users\Matthew\Desktop\JetNet;$(VC_IncludePath);$(WindowsSDK_IncludePath);$(DXSDK_DIR)include;C:\Users\Matthew\Desktop\openal-soft\openal-soft-1.16.0\include</IncludePath>
-    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(DXSDK_DIR)Lib\x86;</LibraryPath>
+    <IncludePath>$(DXSDK_DIR)include;C:\Users\space\Desktop\openal-soft\openal-soft\include;C:\Users\Matthew\Desktop\JetNet;C:\Users\space\Desktop\DirectXTex;$(WindowsSDK_IncludePath);$(VC_IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\space\Desktop\DirectXTex\DirectXTex\Bin\Desktop_2017_Win10\Win32\$(Configuration);$(DXSDK_DIR)Lib\x86;$(WindowsSDK_LibraryPath_x86);$(VC_LibraryPath_x86)</LibraryPath>
     <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
