--- a/JetEngine/JetEngine.vcxproj
+++ b/JetEngine/JetEngine.vcxproj
@@ -41,12 +41,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(DXSDK_DIR)include;C:\Users\space\Desktop\openal-soft\openal-soft\include;C:\Users\Matthew\Desktop\JetNet;C:\Users\space\Desktop\DirectXTex;$(WindowsSDK_IncludePath);$(VC_IncludePath)</IncludePath>
+    <IncludePath>$(DXSDK_DIR)include;../../openal-soft\include;../../JetNet;../../DirectXTex;$(WindowsSDK_IncludePath);$(VC_IncludePath)</IncludePath>
     <LibraryPath>../../DirectXTex\Bin\Desktop_2017_Win10\Win32\$(Configuration);$(DXSDK_DIR)Lib\x86;$(WindowsSDK_LibraryPath_x86);$(VC_LibraryPath_x86)</LibraryPath>
     <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(DXSDK_DIR)include;C:\Users\space\Desktop\openal-soft\openal-soft\include;C:\Users\Matthew\Desktop\JetNet;C:\Users\space\Desktop\DirectXTex;$(WindowsSDK_IncludePath);$(VC_IncludePath)</IncludePath>
+    <IncludePath>$(DXSDK_DIR)include;../../openal-soft\include;../../JetNet;../../DirectXTex;$(WindowsSDK_IncludePath);$(VC_IncludePath)</IncludePath>
     <LibraryPath>../../DirectXTex\Bin\Desktop_2017_Win10\Win32\$(Configuration);$(DXSDK_DIR)Lib\x86;$(WindowsSDK_LibraryPath_x86);$(VC_LibraryPath_x86)</LibraryPath>
     <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
   </PropertyGroup>
