--- a/JetGame/JetGameFramework.vcxproj
+++ b/JetGame/JetGameFramework.vcxproj
@@ -42,11 +42,11 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Users\space\Desktop\openal-soft\openal-soft\include;C:\Users\space\Desktop\JetEngine;C:\Users\space\Desktop\JetNet;$(IncludePath)</IncludePath>
+    <IncludePath>../../openal-soft\include;../;../../JetNet;$(IncludePath)</IncludePath>
     <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>C:\Users\space\Desktop\openal-soft\openal-soft\include;C:\Users\space\Desktop\JetEngine;C:\Users\space\Desktop\JetNet;$(IncludePath)</IncludePath>
+    <IncludePath>../../openal-soft\include;../;../../JetNet;$(IncludePath)</IncludePath>
     <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
