--- a/JetEngine/JetEngine.vcxproj.filters
+++ b/JetEngine/JetEngine.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClCompile Include="Graphics\VRRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HierchicalGrid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics\Models\BasicModel.h">
